Add al the style

--- a/palindroma/index.html
+++ b/palindroma/index.html
@@ -15,11 +15,13 @@
             <label for="string">Inserisci la parola che vuoi verificare</label>
             <input type="text" id="string">
 
-            <button id="verify">Verifica</button>
-
-            <h3 id="result"></h3>
+            <div>
+                <button id="verify" class="btn">Verifica</button>
+            </div>
 
         </div>
+        
+        <h3 id="result" class="result-container"></h3>
 
         <script src="js/script.js"></script>
     </body>
