--- a/pari-e-dispari/index.html
+++ b/pari-e-dispari/index.html
@@ -12,28 +12,36 @@
         <div class="container">
             <h1>Gioca a pari e dispari con il computer</h1>
 
-            <div>
-                <select name="even-or-odd" id="even-or-odd">
-                    <option value="" disabled="disabled" selected="select">Scegli</option>
-                    <option value="even">Pari</option>
-                    <option value="odd">Dispari</option>
-                </select>
+            <div class="container-form">
+                <div>
+                    <p>Scegli se pari o dispari</p>
+                    <select name="even-or-odd" id="even-or-odd">
+                        <option value="" disabled="disabled" selected="select">Scegli</option>
+                        <option value="even">Pari</option>
+                        <option value="odd">Dispari</option>
+                    </select>
+                </div>
+                <div>
+                    <p>Scegli un numero tra 1 e 5</p>
+                    <select name="number" id="number">
+                        <option value="" disabled="disabled" selected="select">Scegli</option>
+                        <option value="1">1</option>
+                        <option value="2">2</option>
+                        <option value="3">3</option>
+                        <option value="4">4</option>
+                        <option value="5">5</option>
+                    </select>
+                </div>
             </div>
+            
+
             <div>
-                <select name="number" id="number">
-                    <option value="" disabled="disabled" selected="select">Scegli</option>
-                    <option value="1">1</option>
-                    <option value="2">2</option>
-                    <option value="3">3</option>
-                    <option value="4">4</option>
-                    <option value="5">5</option>
-                </select>
-            </div>
-            <div>
-                <button id="play">Gioca</button>
+                <button id="play" class="btn">Gioca</button>
             </div>
 
         </div>
+
+        <h2 id="result" class="result-container"></h2>
 
         <script src="js/script.js"></script>
     </body>
